# VideoStab

./: README.md  local.properties
Live/: build.gradle
OnLive/: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: match.cpp  native-opencv.cpp  videoWriterFFmpeg.h
app/src/main/cpp/stabilization/: GuassFilter.cpp  GuassFilter.h  HomoExtractor.cpp  HomoExtractor.h  HomoExtractorKlt.cpp  HomoExtractorKlt.h  MySemaphore.cpp  MySemaphore.h  StableProcessor.cpp  StableProcessor.h  main.cpp
app/src/main/java/com/frank/ffmpeg/: VideoStab.java
app/src/main/java/com/frank/ffmpeg/activity/: MainActivity.java  VideoStabActivity.java
app/src/main/java/com/frank/ffmpeg/util/: FFmpegUtil.java
app/src/main/res/layout/: activity_main.xml  activity_video_stab.xml
gradle/wrapper/: gradle-wrapper.properties
